# GameJamGStar2025

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vite.config.js
animation/: AnimationSystem.js  CardAnimation.js  DOMProtectionManager.js
core/: Buff.js  Card.js  EffectComponent.js  EffectRegistry.js  EventSystem.js  GameMessage.js  GameMessageLog.js  GameState.js  GitHistory.js  Player.js  Team.js
css/: README.md
css/animations/: keyframes.css
css/base/: reset.css
css/components/: buff.css  button.css  card.css  combo-guide.css  drop-zone.css  git-graph.css  hand.css  log.css  modal.css  multi-player.css  status-bar.css  tooltip.css
css/layout/: container.css  header.css  main.css
css/responsive/: media-queries.css
data/: CardData.js  CardEffectDefinitions.js  CardFactory.js  EffectDefinitions.js
game/: Game.js
game/managers/: AnimationManager.js  CardPlayManager.js  ComboBuffHandler.js  ConsoleManager.js  GameEventManager.js  GameFlowController.js  GameUIManager.js  GitGraphGenerator.js  GitGraphManager.js  HandAnimationManager.js  ScreenEffectManager.js
gameplay/: AI.js  AutoBotAI.js  CardEffect.js  TurnManager.js
interaction/: DragDrop.js
server/: README.md  build_exe.bat  commentary_memory.db  env.example  main.py  pyproject.toml  run.py  server.spec  start.bat  start.sh
src/: main.js
src/animation/: AnimationSystem.js  (+1 more)
ui/: BuffRenderer.js  CardRenderer.js  DisplayManager.js  GitGraphRenderer.js  HealthBar.js  LogSystem.js  ManaDisplay.js  MultiPlayerDisplay.js  PlayerStatusBar.js  Tooltip.js
(+32 files in other folders)
